[package]
name = "gerbil-decide"
version = "0.5.0"
edition = "2024"

[[bin]]
name = "gerbil-decide"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true

[target.'cfg(windows)'.build-dependencies]

[target.'cfg(windows)'.dependencies]

# hide windows config
[target.'cfg(windows)'.bin]
name = "gerbil-decide"

[package.metadata.winresource]
OriginalFilename = "gerbil-decide.exe"
ProductName = "gerbil-decide"

[build]
target-dir = "target"